# D3DPracticing

./: .gitignore  CMakeLists.txt  D3DPracticing.sln
Benchmark/: Benchmark.cpp  Benchmark.vcxproj  Benchmark.vcxproj.filters  BenchmarkApp.h  CMakeLists.txt
D3DPracticing/: App.cpp  App.h  BaseException.cpp  BaseException.h  Bindable.cpp  Bindable.h  Box.cpp  Box.h  CMakeLists.txt  ConstantBuffer.h  D3DPracticing.vcxproj  D3DPracticing.vcxproj.filters  Drawable.cpp  Drawable.h  DrawableBase.cpp  DrawableBase.h  DxgiInfoManager.cpp  DxgiInfoManager.h  Graphics.cpp  Graphics.h  GraphicsMacros.h  IndexBuffer.cpp  IndexBuffer.h  InputLayout.cpp  InputLayout.h  Keyboard.cpp  Keyboard.h  Mouse.cpp  Mouse.h  PixelShader.cpp  PixelShader.h  PixelShader.hlsl  Pyramid.cpp  Pyramid.h  PyramidPixelShader.hlsl  Timer.h  Topology.cpp  Topology.h  TransformConstantBuffer.cpp  TransformConstantBuffer.h  (+10 more)
libs/benchmark/lib/Release/: benchmark.lib  benchmark_main.lib
